<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfirmacionDatos">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margen_titulo"
        android:layout_marginBottom="@dimen/margen_titulo"
        android:text="@string/confirmar_datos"
        android:textSize="@dimen/tamano_titulo"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dummy_nombre"
        android:textSize="@dimen/tamano_nombre" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_intermedio"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver_fec_nac"
            android:textSize="@dimen/tamano_texto_datos" />

        <TextView
            android:id="@+id/txtFecNac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_fecha"
            android:textSize="@dimen/tamano_texto_datos" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margen_intermedio"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver_telefono"
            android:textSize="@dimen/tamano_texto_datos" />

        <TextView
            android:id="@+id/txtTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_tel"
            android:textSize="@dimen/tamano_texto_datos" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margen_intermedio"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver_email"
            android:textSize="@dimen/tamano_texto_datos" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_email"
            android:textSize="@dimen/tamano_texto_datos" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margen_intermedio"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver_descripcion"
            android:textSize="@dimen/tamano_texto_datos" />

        <TextView
            android:id="@+id/txtDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_descripcion"
            android:textSize="@dimen/tamano_texto_datos" />
    </LinearLayout>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blanco"
        android:theme="@style/MiBotonRaised"
        android:text="@string/editar_datos"
        android:layout_marginTop="@dimen/margen_boton_datos"
        />

</LinearLayout>